--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,48 @@
 @import 'tailwindcss';
+
+@font-face {
+  font-family: 'Degular';
+  src: local('Degular'), url('./fonts/fonnts.com-DegularDemo-Light.otf') format('otf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+/* @font-face {
+  font-family: 'Degular';
+  src: local('Degular'), url('./fonts/fonnts.com-DegularDemo-regular.otf') format('otf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Degular';
+  src: local('Degular'), url('./fonts/fonnts.com-DegularDemo-Medium.otf') format('otf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Degular';
+  src: local('Degular'), url('./fonts/fonnts.com-DegularDemo-Semibold.otf') format('otf');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Degular';
+  src: local('Degular'), url('./fonts/fonnts.com-DegularDemo-Bold.otf') format('otf');
+  font-weight: 700;
+  font-style: normal;
+} */
+
+body {
+  font-family: 'Degular', sans-serif;
+}
+
+.degular-regular {
+  font-family: 'Degular', sans-serif;
+}
+
+/* .font {
+  font-family: 'Degular', sans-serif;
+} */
